@@ -1342,6 +1342,17 @@ Warning messages:
 > ldp <- diff(log(diff(pbeta(0.5, 2^-(90+ 1:25), 2^-60, log.p=TRUE))))
 > stopifnot(abs(ldp - log(1/2)) < 1e-9)
 > ## pbeta(*, log) lost all precision here, for R <= 3.0.x (PR#15641)
+> ##
+> ## "stair function" effect (from denormalized numbers)
+> a <- 43779; b <- 0.06728
+> x. <- .9833 + (0:100)*1e-6
+> px <- pbeta(x., a,b, log=TRUE) # plot(x., px) # -> "stair"
+> d2. <- diff(dpx <- diff(px))
+> stopifnot(all.equal(px[1], -746.0986886924, tol=1e-12),
++           0.0445741 < dpx, dpx < 0.0445783,
++           -4.2e-8 < d2., d2. < -4.18e-8)
+> ## were way off in R <= 3.1.0
+> 
 > 
 > ## pbinom(), dbinom(), dhyper(),.. : R allows "almost integer" n
 > for (FUN in c(function(n) dbinom(1,n,0.5), function(n) pbinom(1,n,0.5),
